# Buy-and-Hold-Financial-Strategy

./: app.py  buy_hold_notebook.ipynb  pyproject.toml  render.yaml
buy-hold-strategy/: render.yaml
